--- a/scss/common/extend.scss
+++ b/scss/common/extend.scss
@@ -3,33 +3,48 @@
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
+
 %font-s {
   font-weight: $font-bold;
   font-size: $font-s;
 }
+
 %font-sm {
   font-weight: $font-bold;
   font-size: $font-sm;
 }
+
 %font-xl {
   font-weight: $font-bold;
   font-size: $font-xl;
 }
+
 %font-xxl {
   font-weight: $font-bold;
   font-size: $font-xxl;
 }
+
 %font-big {
   font-weight: $font-bold;
   font-size: $font-big;
 }
 
+%section-link-hover {
+
+  display: block;
+  font-weight: $font-bold;
+  color: $active-regular;
+
+  &:hover {
+    color: $accent-color;
+    transition: .5s;
+  }
+}
 
 
 %section-link {
   a {
     display: block;
-    text-decoration: none;
     letter-spacing: 1px;
     text-transform: uppercase;
     font-size: $font-s;
@@ -53,7 +68,8 @@
     }
   }
 }
-%d-center{
+
+%d-center {
   display: flex;
   justify-content: center;
   align-items: center;
