--- a/scss/components/carousel-team/carousel-team-media.scss
+++ b/scss/components/carousel-team/carousel-team-media.scss
@@ -1,32 +1,32 @@
-.carousel-team{
-  @media (max-width: 767px) {
-    .container {
-      max-width: 576px;
+.carousel-team {
+  @media (min-width: 1600px) {
+    .container-lg {
+      max-width: 1600px;
     }
-    .carousel-indicators{
-      bottom: -50px;
+  }
+  @media (max-width: 992px) {
+    .carousel-item{
+      flex-direction: column;
     }
-    &__caption-description {
-      font-size: $font-lg;
-      margin-bottom: 20px;
+    .carousel-team__photo{
+      width: 100%;
     }
-    &__caption-name{
-      margin-bottom: 10px;
-    }
-    &__caption-post{
-      margin-bottom: 0;
-    }
-    &__wrapper .photo-team{
-      width: 105%;
+    .photo-team{
+      height: 500px;
     }
 
-    }
+  }
+  @media (max-width: 767px) {
+      .container-lg{
+        --bs-gutter-x: 3.75rem;
+      }
+  }
   @media (max-width: 576px) {
-    .container {
-      max-width: 320px;
-    }
-    &__wrapper .photo-team{
-      width: 110%;
-    }
+   &__inner-info{
+     &-description{
+       font-size: $font-xl;
+       line-height: 36px;
+     }
+   }
   }
 }
