--- a/scss/components/menu-scroll/menu-scroll.scss
+++ b/scss/components/menu-scroll/menu-scroll.scss
@@ -1,11 +1,15 @@
 .menu-scroll {
   padding: 60px 0 30px;
 
+  &__left {
+    text-align: end;
+  }
+
   .list-group {
     @extend %font-big;
 
     .list-group-item {
-      padding: 5px 10px;
+      padding: 10px 0;
     }
 
     .active {
@@ -25,7 +29,7 @@
 
     & > h4 {
       @extend %font-xl;
-      margin: 6% 0 30px;
+      margin: 30px 0;
     }
 
     p {
