--- a/scss/common/extend.scss
+++ b/scss/common/extend.scss
@@ -75,3 +75,11 @@
   align-items: center;
 }
 
+%picture{
+  width: 100%;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+}
+
