--- a/scss/common/variables.scss
+++ b/scss/common/variables.scss
@@ -34,7 +34,8 @@ $gradient-shadow-height: 10px;
 
 $default-border-radius: 12px;
 $border-radius-50: 50%;
-
+$p-30: 30px;
+$g-30: 30px;
 
 
 $main-gradient: linear-gradient(228.57deg, #323264 11.93%, #323264 57.17%, #643E72 87.46%);
