--- a/scss/components/header/header-about-us/about-us.scss
+++ b/scss/components/header/header-about-us/about-us.scss
@@ -28,7 +28,7 @@
           display: inline-block;
           width: 7px;
           height: 7px;
-          background: white;
+          background: $grey-bg-separator;
           border-radius: $border-radius-50;
           margin: 0 6px 2px 3px;
         }
@@ -43,6 +43,7 @@
       input[name="lang"]:checked + span {
         background: $accent-color;
         transition: 1s;
+        color: $white-color;
 
         &:hover {
           background: $white-color-20;
@@ -52,7 +53,7 @@
       label span {
         cursor: pointer;
         font-weight: $font-bold;
-        color: $white-color;
+        color: $grey-bg-text;
         padding: 5px 7px;
         border-radius: 8px;
         display: inline-block;
@@ -65,7 +66,7 @@
 
     &-address, &-phone {
       a {
-        color: $white-color;
+        color: $grey-bg-text;
         text-decoration: none;
 
         &:hover {
@@ -86,7 +87,7 @@
         text-decoration: none;
 
         path {
-          fill: $white-color;
+          fill: $grey-bg-text;
         }
 
         &:hover {
@@ -102,6 +103,26 @@
   .navbar {
     &-brand {
       margin-top: -20px;
+
+      &:hover .navbar-brand-way {
+        color: $accent-color;
+        transition: .8s;
+        box-shadow: 0 0 65px -20px black;
+      }
+
+      .slash-nav {
+        margin-bottom: 14px;
+      }
+
+      &-way {
+        font-size: $font-way;
+        line-height: 44px;
+        color: $main-color;
+
+        &:hover, .navbar-brand {
+          color: $accent-color;
+        }
+      }
     }
 
     &-nav {
@@ -112,13 +133,15 @@
     }
 
     .nav-link {
+      color: $active-regular;
       font-weight: $font-bold;
       padding-bottom: 3px;
 
-      &:hover , &:active &:focus-visible{
+      &:hover, &:active &:focus-visible {
         border-bottom: 2px solid;
         transition: .5s;
       }
+
       &.active {
         border-bottom: 2px solid;
       }
