--- a/scss/components/about-us/header-about-us/about-us-media.scss
+++ b/scss/components/about-us/header-about-us/about-us-media.scss
@@ -1,4 +1,9 @@
 .header{
+  @media (min-width: 1600px) {
+    .container-lg {
+      max-width: 1600px;
+    }
+  }
 
   @media (min-width: 1024px) {
     &__top-content{
@@ -29,11 +34,14 @@
   }
 
   @media (max-width: 767px) {
+    .container-lg{
+      --bs-gutter-x: 30px;
+    }
     &{
       padding-top: 0;
     }
     &__top{
-      background-color: $white-color-20;
+      background-color: $grey-bg;
 
       &-content{
         margin-bottom: 0;
@@ -55,14 +63,14 @@
       --bs-border-width: 0;
       padding: 7px;
       &:hover{
-        background-color: $white-color-20;
+        background-color: $grey-bg-separator;
         transition: .3s;
       }
       &:focus {
         box-shadow: none;
       }
       svg{
-        fill: $white-color;
+        fill: $main-color;
       }
     }
     .navbar-collapse{
@@ -90,6 +98,7 @@
     }
   }
   @media (max-width: 567px) {
+    padding-bottom: 30px;
     .navbar {
       &-brand {
         &-way {
