--- a/scss/components/about-us/header-about-us/about-us.scss
+++ b/scss/components/about-us/header-about-us/about-us.scss
@@ -1,8 +1,6 @@
 .header {
-  position: absolute;
   width: 100%;
-  padding-top: 50px;
-  z-index: 1;
+  padding: 50px 0 60px;
 
   &-content-wrapper {
     position: relative;
@@ -59,7 +57,7 @@
         display: inline-block;
 
         &:hover {
-          background: $white-color-20;
+          background: $grey-bg;
         }
       }
     }
@@ -136,6 +134,7 @@
       color: $active-regular;
       font-weight: $font-bold;
       padding-bottom: 3px;
+
 
       &:hover, &:active &:focus-visible {
         border-bottom: 2px solid;
