update block about-us

--- a/scss/about-us.scss
+++ b/scss/about-us.scss
@@ -2,6 +2,7 @@
 @import "components/about-us/header-about-us";
 @import "components/about-us/intro";
 @import "components/about-us/bg-picture";
+@import "components/about-us/ending";
 
 
 
