--- a/scss/about-us.scss
+++ b/scss/about-us.scss
@@ -3,6 +3,7 @@
 @import "components/about-us/intro";
 @import "components/about-us/bg-picture";
 @import "components/about-us/ending";
+@import "components/about-us/achievements";
 
 
 
