--- a/scss/components/about-us/ending/ending.scss
+++ b/scss/components/about-us/ending/ending.scss
@@ -1,11 +1,18 @@
 .ending{
+  padding: 30px 0 60px;
   &__wrapper{
     gap: 60px;
   }
   &__text{
+    font-size: $font-md;
+    line-height: 30px;
     flex: 1 1 100%;
   }
   &__title{
-    flex: 1 1 75%;
+    font-weight: $font-bold;
+    font-size: $font-big;
+    line-height: 46px;
+    @extend %red-gradient;
+    flex: 1 1 65%;
   }
 }
